--- a/Info-MacScare.plist
+++ b/Info-MacScare.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -36,7 +36,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.3.3</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GlkSessionClass</key>
 	<string>MacScareGlkSession</string>
 	<key>NSMainNibFile</key>
